[gd_scene load_steps=2 format=3 uid="uid://b3ty1y6tx1i50"]

[ext_resource type="Script" uid="uid://p013c48wdf4d" path="res://src/objects/level_entity.gd" id="1_1vsk5"]

[node name="LevelEntity" type="Node2D"]
script = ExtResource("1_1vsk5")

[node name="MainStateSprite" type="Sprite2D" parent="."]

[node name="AltStateSprite" type="Sprite2D" parent="."]
visible = false
